@@ -24,12 +24,14 @@
 #include <glib-object.h>
 #include <gnokii.h>
 
+#include "phonemgr-listener.h"
+
 G_BEGIN_DECLS
 
 char *phonemgr_utils_write_config (const char *driver, const char *addr);
-char *phonemgr_utils_guess_driver (char *device);
+char *phonemgr_utils_guess_driver (char *device, GError **error);
 void phonemgr_utils_gn_statemachine_clear (struct gn_statemachine *state);
-const char *phonemgr_utils_gn_error_to_string (gn_error error);
+const char *phonemgr_utils_gn_error_to_string (gn_error error, PhoneMgrError *perr);
 
 G_END_DECLS
 
